--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,15 @@ p {
   font-size: medium;
 }
 
+input[type="submit"] {
+  margin-top: 1rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+input[type="submit"] {
+  margin-left: 1rem;
+}
+
 /* FOOTER */
 
 footer {
